# django-htmx-course

./: README.md  pyproject.toml
content/: models.py  views.py
